# batch-cooking

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260426011955_add_recipe.py  20260426012515_add_recipe_ingredient_and_recipe_tag.py  20260426012540_add_plan.py  20260426012619_add_meal_slot.py  20260426012636_add_shopping_list_item.py  20260426012648_add_food_inventory_and_dish_inventory.py  20260426012659_add_settings.py  20260426210018_dish_inventory_recipe_id_nullable.py  20260426211848_shopping_list_item_type_supermarket.py  20260502000000_remove_plan.py  2b07a8d6a13e_add_ingredient_and_tag.py
src/batch_cooking/: config.py  database.py  main.py
src/batch_cooking/models/: __init__.py  base.py  dish_inventory.py  food_inventory.py  ingredient.py  meal_slot.py  plan.py  recipe.py  recipe_ingredient.py  recipe_tag.py  settings.py  shopping_list_item.py  tag.py
src/batch_cooking/repositories/: base.py  dish_inventory.py  food_inventory.py  ingredient.py  meal_slot.py  plan.py  recipe.py  settings.py  shopping_list.py  tag.py
src/batch_cooking/routers/cooking/: router.py
src/batch_cooking/routers/home/: router.py  (+1 more)
src/batch_cooking/services/: base.py  dish_inventory.py  food_inventory.py  ingredient.py  meal_slot.py  plan.py  recipe.py  schemas.py  settings.py  shopping_list.py  tag.py
src/batch_cooking/templates/: base.html  cooking.html  home.html  inventory.html  planner.html  recipes.html  shopping_list.html  week.html
static/css/: main.css
(+39 files in other folders)
